fix- Spacing issue while lodding

--- a/assets/css/admin.scss
+++ b/assets/css/admin.scss
@@ -1629,6 +1629,9 @@ body.everest-forms-builder {
 		display: none;
 	}
 }
+p.search-box {
+	margin-top: 15px;
+}
 /**
  * Form Builder
  **/
